@@ -1,0 +1,1 @@
+com/gallery/GalleryRemote/util/PrivateShutdown*
